# AI_Groq_Economics_Toolkit

./: .gitignore  README.md  pyproject.toml
config/: model_prices.json
docs/: areas_for_improvement.md  changelog.md  cli-usage.md  modeling-guide.md  overview.md  repomap.md
groq_econ/: cli.py  estimator.py  pricing.py  reporting.py  scenarios.py
scenarios/: scenario_agent.yaml  scenario_rag.yaml  scenario_support.yaml
tests/: test_cli.py  test_estimator.py  test_pricing.py  test_scenarios.py
